[package]
name = "ia-helper"
categories = ["command-line-utilities"]
description = "Internet Archive Helper - High-performance file downloader for archive.org"
keywords = ["cli", "archive", "internet-archive", "download", "helper"]
authors = ["Fork Maintainer <gameaday@users.noreply.github.com>", "Original Author: Martin Wimpress <code@wimpress.io>"]
repository = "https://github.com/Gameaday/ia-get-cli"
readme = "README.md"
version = "2.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.18.0"
md5 = "0.8.0"
sha1 = "0.10"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "blocking", "json"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
toml = "0.9"
futures-util = "0.3"
anyhow = "1.0"
regex = "1.10"
flate2 = "1.0"
bzip2 = "0.6"
liblzma = "0.4"
tar = "0.4"
zip = "5.1.1"
futures = "0.3"
bytes = "1.0"
urlencoding = "2.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
sys-info = "0.9.1"

# GUI dependencies (optional)
eframe = { version = "0.32.1", optional = true }
egui = { version = "0.32.1", optional = true }
egui_extras = { version = "0.32.1", features = ["default"], optional = true }
rfd = { version = "0.15.0", optional = true }
env_logger = { version = "0.11.0", optional = true }

[lib]
name = "ia_get"
crate-type = ["rlib", "cdylib"]  # Support both static linking and dynamic library

[[bin]]
name = "ia-get"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.7.0", features = ["html_reports"] }

[target.'cfg(windows)'.build-dependencies]
embed-manifest = "1.4.0"

[features]
default = ["cli"]
cli = []
# GUI feature available but not default - CLI-first approach
gui = ["eframe", "egui", "egui_extras", "rfd", "env_logger"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1  # Better optimization
panic = "abort"  # Smaller binary size

[profile.dev]
# Optimize for fast compilation during development
opt-level = 0
debug = true
split-debuginfo = "unpacked"  # Faster linking on macOS/Windows
incremental = true
# Reduce the number of codegen units to improve build speed for small projects
codegen-units = 256

[profile.fast-dev]
# Custom profile for faster development iteration
inherits = "dev"
opt-level = 1
debug = false  # Reduce debug info for faster compilation
incremental = true
# Faster compilation with reduced codegen units
codegen-units = 16

# Profile for CI builds - balance between speed and optimization
[profile.ci]
inherits = "release"
opt-level = 3  # Full optimization but not size-focused
strip = true
lto = "thin"  # Faster than full LTO but still good optimization
codegen-units = 1

[[bench]]
name = "download_performance"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false
