[package]
name = "ia-get"
categories = ["command-line-utilities"]
description = "File downloader for archive.org"
keywords = ["cli", "archive", "internet-archive", "download"]
authors = ["Martin Wimpress <code@wimpress.io>"]
repository = "https://github.com/wimpysworld/ia-get"
readme = "README.md"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
indicatif = "0.18.0"
md5 = "0.8.0"
regex = "1.12.2"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.224", features = ["derive"] }
serde-xml-rs = "0.8.1"
thiserror = "2.0.15"
url = "2.5.4"
clap = { version = "4.5.47", features = ["derive"] }
ctrlc = "3.5.0"
colored = "3.0.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
