[package]
name = "ia_get_mobile"
version = "1.6.0"
edition = "2021"
description = "Mobile FFI wrapper for ia-get CLI"
authors = ["Fork Maintainer <gameaday@users.noreply.github.com>"]

[lib]
name = "ia_get_mobile"
crate-type = ["cdylib", "staticlib"]

[dependencies]
ia-get = { path = "../../", features = ["ffi"] }
tokio = { version = "1.47", features = ["rt-multi-thread"] }

[profile.release]
strip = true
opt-level = "z"  # Optimize for size on mobile
lto = true
codegen-units = 1
panic = "abort"